# expense-tracker

./: .env.example  .pre-commit-config.yaml  pyproject.toml
api/: deps.py  main.py
api/api/v1/: expense.py
api/auth/: config.py
api/core/: config.py
api/entities/: expense.py
api/models/: Expense.py
app/: main.py
app/api/v1/: expense.py
app/core/: config.py
app/db/: migrate.py  postgres.py
app/entities/: expense.py
app/models/: Expense.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  config.tsx
frontend/src/Dashboard/: index.tsx
frontend/src/Home/: index.tsx
frontend/src/assets/images/: index.ts
frontend/src/components/: avatar.tsx  badge.tsx  button.tsx  dropdown.tsx  navbar.tsx  sidebar.tsx
