[project]
name = "expense-tracker"
version = "0.1.0"
description = "A simple personal expense tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "supertokens-python>=0.30.2",
]

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
